# attention-transformer-v2

./: .gitignore  Cargo.toml  INSTRUCTIONS.md  README.md  SOURCES.md  build.rs  energy.csv  scaling.csv
benches/: packed_vs_standard_matmul.rs  transformer_forward.rs
benchmarks/: compare_flash.py  trade_attn_flash_only.py
cuda_src/: TRADE_PORT.md  cuda_extras.cu  mega_kernel.cu  trade_dispatch.cu  trade_fp16_attn.cu  waller_operator.cu  waller_v7_trade.cu
docs/: AGENT_TECHNOLOGY_BRIEF.md  ENERGY_EVIDENCE.md  FLASH_BASELINE.md  GEODESIC_SWEEP_DESIGN.md  GITHUB_AUTH.md  HYPERSCALE_BENCH.md  LUXIEDGE_BUILD_ROADMAP.md  NOVEL_COMBINATIONS.md  POD_CLONE.md  QUANT_TRADE_LOCKED.md  RUNPOD_CONNECT.md  RUNPOD_CPU_vs_GPU.md  RUNPOD_ONE_BLOCK.md  RUNPOD_WORKFLOW.md  SCALING_EVIDENCE.md  TECHNICAL_DEEP_DIVE.md  TRADE_V3_ARCHITECTURE.md  V2_COMPLETION.md  V2_LINEAGE.md  V2_MISSION.md  WHERE_AM_I.md
docs/verification/: BACKUP_RESTORE.md  MILESTONE_H100_CUDA.md  SUBSTANTIAL_TEST_REPORT.md
examples/: cuda_bench.rs  cuda_layer_bench.rs  cuda_quant_bench.rs  cuda_quant_stack.rs  cuda_verify.rs  energy_benchmark.rs  energy_sweep.rs  fp8_parity_gate.rs  gpt2_demo.rs  gpt2_smoke.rs  gpt2_speculative.rs  gpu_quantum_trader.rs  hyperwall_bench.rs  kv_speedup.rs  llama_demo.rs  long_context_bench.rs  multiply_free_probe.rs  npow_scaling_proof.rs  perf_bench.rs  production_demo.rs  receipt_backtest.rs  scaling_sweep.rs  speculative_geom_probe.rs  train_draft_head.rs  turbo_bench.rs
integrations/: trade_geodesic_flash.py
integrations/torch/: README.md  luxiedge_ops.py  waller_attention.py
integrations/vllm/: README.md  luxi_waller_attention.py
metal_src/: mega_kernel.metal
scripts/: bootstrap_pod_terminal.sh  check_edge.sh  commercial_proof.sh  compare_flash_pod.sh  energy_bench_pod.sh  gpu_quick.sh  mac_save_and_pod_test.sh  pod  pod-setup  pod_env.sh  pod_from_mac.sh  runpod.env  runpod_cuda_check.sh  runpod_fresh_deploy.sh  runpod_fresh_deploy_v2.sh  runpod_geodesic_bench.sh  runpod_quant_gate.sh  runpod_ssh.sh  runpod_substantial_test.sh  runpod_v2_test.sh  sync_and_test_runpod.sh  trade_geodesic_pod.sh
src/: activations.rs  config.rs  layernorm.rs  lib.rs  linalg.rs  mlp.rs  online_softmax.rs  rope_rmsnorm.rs  standard_attention.rs  trade_attn.rs  trade_flash_bridge.rs  waller_operator.rs  welford.rs  wnsm_transformer.rs
src/ffi/: mod.rs
src/fp8/: e4m3.rs  mod.rs  shadow.rs
src/gpt2/: draft_head.rs  loader.rs  mod.rs  model.rs  tokenizer.rs
src/gpu/: cuda.rs  mod.rs
src/hyperstack/: mod.rs
src/llama/: mod.rs
src/npow/: mod.rs  scaling.rs  witness.rs
src/quant/: backtest.rs  mod.rs  signal.rs
src/scaling/: mod.rs  profile.rs
testdata/: quant_signals.csv
tests/: cuda_lanes.md  gpt2_incremental_equiv.rs  scaling_audit_contract.rs  transformer_forward.rs  waller_standard_equivalence.rs
webgpu_src/: mega_kernel.wgsl
